# UNIX_LINDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: lindaRegex.h  lindaSpace.h  lindaTuples.h  sharedMemoryHandler.h  utils.h
src/: lindaRegex.cpp  lindaTuples.cpp  main.cpp  sharedMemoryHandler.cpp  utils.cpp
tests/: tests_main.cpp
